--- a/test.scss
+++ b/test.scss
@@ -6,10 +6,15 @@
 }
 .block-one {
     font-weight: 600;
-    margin: 0 auto;
+    margin:0 auto;
     width: 400px;
     height: 200px;
     border: 2px solid #e9681e;
     border-radius: 18px;
     background-color: #f74e81;
+}
+
+.block-two {
+    margin: 0 auto;
+    
 }
